--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,27 +1,21 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Python: Flask",
+            "name": "Python: Docker",
             "type": "python",
             "request": "launch",
-            "module": "flask",
-            "env": {
-                "FLASK_APP": "app.py",
-                "FLASK_ENV": "development",
-                "FLASK_DEBUG": "0"
-            },
-            "args": [
-                "run",
-                "--host","0.0.0.0",
-                "--port","9000",
-                "--no-debugger",
-                "--no-reload"
-            ],
-            "jinja": true
+            "module": "app", // Assuming your script is named app.py
+            "cwd": "${workspaceFolder}", // Working directory inside the container
+            "docker": {
+                "build": {
+                    "dockerfile": "${workspaceFolder}/Dockerfile", // Path to your Dockerfile
+                    "context": "${workspaceFolder}"
+                },
+                "run": {
+                    "env": {} // Add any environment variables needed by your app here
+                }
+            }
         }
     ]
 }
